# projet3D

./: CMakeLists.txt  Makefile  README.md  output.tga  projet3D
src/: Model.cpp  Model.h  lecture.cpp  lecture.hpp  main.cpp  main.cpp~  matrice.cpp  matrice.h  our_gl.cpp  our_gl.h  outils.cpp  outils.hpp  vec3Df.cpp  vec3Df.hpp
